fix: minor ui shift on quick add inline

--- a/apps/client/src/features/rundown/entry-editor/quick-add-cursor/QuickAddInline.module.scss
+++ b/apps/client/src/features/rundown/entry-editor/quick-add-cursor/QuickAddInline.module.scss
@@ -4,7 +4,6 @@
   gap: 1rem;
   position: relative;
 
-  height: 1px;
   background: $blue-500;
   z-index: $zindex-floating;
 }
